--- a/apps/block_scout_web/priv/gettext/zh/LC_MESSAGES/default.po
+++ b/apps/block_scout_web/priv/gettext/zh/LC_MESSAGES/default.po
@@ -544,7 +544,7 @@ msgstr "Eth RPC"
 #: lib/block_scout_web/templates/transaction/overview.html.eex:216
 #: lib/block_scout_web/views/wei_helpers.ex:78
 msgid "Ether"
-msgstr "VTR"
+msgstr "VAL"
 
 #: lib/block_scout_web/templates/api_docs/_action_tile.html.eex:211
 #: lib/block_scout_web/templates/api_docs/_eth_rpc_item.html.eex:164
